Version 6.0.0-RC.11
======================================================================================================================
AllOverIt
  * Added support for ExcludeWhen() to ObjectMapper
  * Updated ObjectMapper to default to creating empty collections when the source is null (instead of assigning null).
    This can be changed via the default options (PropertyMatcherOptions).


AllOverIt.Pagination
  * Renamed the exposed query provided to the paginator as BaseQuery so it isn't confused with the resultant paginated
    query provided by GetPageQuery(). This base query can be used to get the total page count without having to carry
    it around seperately.


04 Sep 2022
Version 6.0.0-RC.10
======================================================================================================================
AllOverIt
  * Added ExpressionUtils.GetConstructorWithParametersAsObjects() so 'object' argument types can be used to construct
    other types with constructor arguments
  * Updated TypeFactory to allow object creation based on Type arguments rather than generic types. In summary:
    - TypeFactory<TCreate>.Create() will create a factory for the provided type. Generics or Type args can be used to
      create the required type.
    - TypeExtensions.GetFactory() will create a factory for the type being extended. Generics or Type args can be used
      to create the required type.
  * Object mapper refactored to allow configuration to be injected => allowing it to be defined up front and multiple
    mapper instances being able to use it.
  * Renamed DeepClone in ObjectMapperOptions to DeepCopy

AllOver.Fixture
  * Fixed getWithinRange() related methods to handle int.MaxValue correctly.


04 Sep 2022
Version 6.0.0-RC.9
======================================================================================================================
AllOverIt
  * ObjectMapper significantly updated: