@@ -6,13 +6,13 @@ namespace AllOverIt.Aws.Cdk.AppSync.Schema.Types
     [SchemaType("PageInfo")]
     public interface IPageInfo
     {
-        /// <summary>The cursor for the start of the current page.</summary>
-        public string CurrentPageCursor();
+        /// <summary>The token for the start of the current page.</summary>
+        public string CurrentToken();
 
-        /// <summary>The cursor for the start of the previous page.</summary>
-        public string PreviousPageCursor();
+        /// <summary>The token for the start of the previous page.</summary>
+        public string PreviousToken();
 
-        /// <summary>The cursor for the start of the next page.</summary>
-        public string NextPageCursor();
+        /// <summary>The token for the start of the next page.</summary>
+        public string NextToken();
     }
 }
